--- a/web/part2/css/styles.css
+++ b/web/part2/css/styles.css
@@ -1,11 +1,27 @@
 html, body {
 	height: 100%;
-	overflow: hidden;
 }
 
 #main {
-	height: 100%:;
-	padding-top: 60px;
+	height: 100%;
+	text-align: center;
+}
+
+#header {
+	text-align: center;
+}
+#header .icon-info {
+	display: flex;
+	flex-direction: row;
+	justify-content: center;
+	align-items: center;
+}
+#header i {
+	margin: 0px 8px;
+}
+
+#header-toggle {
+	margin: auto;
 }
 
 #grid {
